# whisp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/whisp-core/: Cargo.toml
crates/whisp-core/src/: lib.rs  state.rs
crates/whisp-core/src/config/: mod.rs  schema.rs
crates/whisp-core/src/context/: debounce.rs  mod.rs  screenshot.rs
crates/whisp-core/src/input/: classifier.rs  mod.rs
crates/whisp-core/src/llm/: mod.rs  prompt.rs
crates/whisp-core/src/llm/ollama/: api.rs  download.rs  mod.rs  process.rs
crates/whisp-core/src/overlay/: caret.rs  mod.rs
crates/whisp-core/src/privacy/: blocklist.rs  mod.rs  password_detect.rs  secure_buffer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
ui/: index.html
ui/overlay/: index.html  overlay.js  style.css
