[package]
name = "whisp"
version = "0.1.0"
edition = "2021"
description = "Whisp — privacy-first keystroke suggestion daemon"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
whisp-core = { path = "../crates/whisp-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"

[lib]
name = "whisp_app"
crate-type = ["lib", "cdylib", "staticlib"]
