[package]
name = "whisp-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for Whisp keystroke suggestion daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdev = "0.5"
xcap = "0.9"
zeroize = { version = "1", features = ["derive"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"
dirs = "6"
log = "0.4"
thiserror = "2"
enigo = "0.3"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
zstd = "0.13"
